[tool.poetry]
name = "jupyter-playground"
version = "0.1.1"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
jupyter = "^1.0"
numpy = "^1.16"
pandas = "^0.24.2"
jupyter_contrib_nbextensions = "^0.5.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
